--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "cogo-toast": "^4.2.3",
+    "country-state-city": "^3.1.2",
     "formik": "^2.2.9",
     "history": "^5.3.0",
     "i": "^0.3.7",
@@ -37,6 +38,7 @@
     "redux": "^4.2.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.4.2",
+    "rwanda": "^2.1.5",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
