--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "bootstrap": "^5.2.3",
     "cogo-toast": "^4.2.3",
     "country-state-city": "^3.1.2",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "history": "^5.3.0",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "npm": "^9.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.41.5",
     "react-icons": "^4.7.1",
     "react-jvectormap": "^0.0.16",
     "react-places-autocomplete": "^7.3.0",
@@ -40,6 +43,9 @@
     "redux-thunk": "^2.4.2",
     "rwanda": "^2.1.5",
     "sass": "^1.57.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
