--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@mui/x-data-grid": "^5.17.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
